refactor code held seat